# ContextFlow

./: .gitignore  PROJECT.md  README.md  TODO.md  pyproject.toml
examples/: agent_once_qwen.py  agent_stream_qwen.py  basic_flow.py  sandbox_chat_codegen.py  simple_agent_define.py
examples/agents/: agent_once_qwen.py  agent_stream_qwen.py  multi_agent_async.py  multi_agent_state_transfer.py  multi_agent_weather.py  simple_agent_define.py
examples/debug/: debug_agent.py
examples/sandbox/: sandbox_attach_agent.py  sandbox_chat_codegen.py
examples/state_machine/: agent_self_driven.py  agent_state_machine.py  agent_stateful_assistant.py
src/contextflow/: __init__.py  cli.py  config.py  exceptions.py
src/contextflow/agents/: __init__.py  agent.py  session.py  state_machine.py
src/contextflow/api/: __init__.py  main.py
src/contextflow/core/: __init__.py  composer.py  models.py  parser.py  pruning.py
src/contextflow/debug/: __init__.py  server.py  session.py
src/contextflow/lens/: __init__.py  middleware.py
src/contextflow/persistence/: __init__.py  base.py  memory.py
src/contextflow/providers/: __init__.py  client.py  config.py
src/contextflow/runners/: __init__.py  async_agent.py
src/contextflow/sandbox/: __init__.py  (+1 more)
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_core_composer.py  test_core_models.py  test_core_parser.py  test_core_pruning.py  test_exceptions.py  test_lens.py  test_persistence.py  test_providers.py  test_runners.py  test_sandbox.py  test_session.py  test_state.py  test_state_machine.py  test_streaming.py
(+9 files in other folders)
